--- a/css/shared/_typography.scss
+++ b/css/shared/_typography.scss
@@ -336,3 +336,36 @@ label{
         }
     }    
 }
+
+.owl-nav{
+    .owl-prev, .owl-next{
+        &:hover{
+            background-color: $primary !important;
+        }
+        &.disabled{
+            opacity: 1;
+            i{
+                opacity: 0.5;
+            }
+        }
+        i{
+            font-size: 25px;
+            padding: 5px;
+            color: $secondary !important;
+        }
+    }
+}
+.owl-dots{
+    .owl-dot{
+        span{
+            background-color: $color-smoke !important;
+            width: 11px;
+            height: 11px;
+        }
+        &.active{
+            span{
+                background-color: $primary !important;
+            }
+        }
+    }
+}
