Oprava aside menu v product layout
-nefungoval hover efekt na otevření/zavření filtrů/kategoií

-přidání verze ---> menu vpravo

--- a/css/main.css
+++ b/css/main.css
@@ -360,9 +360,14 @@ form button.btn-standard {
   display: block;
 }
 
-.chek-name-label {
-  margin-left: 20px;
-  margin-bottom: 0;
+.custom-check-label-line {
+  padding-left: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 label {
