--- a/css/productDetail.scss
+++ b/css/productDetail.scss
@@ -115,6 +115,9 @@
             }
             .product-select{
                 margin-bottom: 10px;
+                label{
+                    display: inline-block;
+                }
             }
 
             //#region color-filters
