--- a/css/productDetail.scss
+++ b/css/productDetail.scss
@@ -1,6 +1,6 @@
 @import "shared/_variables";
 
-.product-layout{
+.product-detail{
 
 
     h3{
@@ -14,21 +14,15 @@
         }
         #product-main-photo{
             height: 540px;
+            overflow: hidden;
             @include media-breakpoint-down(sm) { 
                 height: 320px;
             }
             #main-img-link{
                 display: flex;
                 align-items: center;
-                width: 100%;
                 height: 100%;
-                #main-img{
-                    display: block;
-                    margin: auto;
-                    max-height: 100%;
-                    max-width: 100%;
-                    padding: 30px;
-                }
+                padding: 30px;
             }
             
         }
@@ -88,6 +82,15 @@
         .product-info{
             max-height: 72px;
             overflow-y: hidden;
+        }
+        .product-list-info{
+            margin-top: 30px;
+            margin-bottom: 0;
+            color: $color-dark-smoke;
+            padding-left: 15px;
+            li{
+                padding: 2px 0;
+            }
         }
     }
     .product-special-info-bar{
@@ -206,21 +209,7 @@
 
         .add-to-cart-bar{
             display: flex;
-            .icons{
-                i{
-                    padding-top: 10px;
-                    width: 35px;
-                    height: 35px;
-                    font-size: 15px;
-                    text-align: center;
-                    vertical-align: middle;
-                    color: $secondary;
-                    &:hover{
-                        background-color: $secondary;
-                        color: white;
-                    }
-                }
-            }
+            
             .add-to-cart-btn{
                 i{
                     padding: 5px;
@@ -237,29 +226,33 @@
             }
         }
 
-        .product-footer-bar{
-            margin-top: 30px;
-            display: flex;
-            justify-content: space-between;
-            .tags-bar{
-                display: flex;
-                .tag{
-                    font-size: $font-small;
-                    font-weight: 600;
-                    color: $secondary;
-                    background-color: $color-light-smoke;
-                    border: $default-border;
-                    margin-right: 5px;
-                    padding: 2px 5px;
-                }
-            }
-            .social-bar{
-                display: flex;
-                align-items: center;
-            }
-
-        }
+        
     }
+
+    .product-footer-bar{
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+        .tags-bar{
+            display: flex;
+            .tag{
+                font-size: $font-small;
+                font-weight: 600;
+                color: $secondary;
+                background-color: $color-light-smoke;
+                border: $default-border;
+                margin-right: 5px;
+                padding: 2px 5px;
+            }
+        }
+        .social-bar{
+            display: flex;
+            align-items: center;
+        }
+
+    }
+
+
     .product-detail-info{
         .info-nav-check{
             display: none;
@@ -292,7 +285,6 @@
                 display: block;
             }
             .detail-info-container{
-                
                 .wrapper{
                     display: none;
                     border: $default-border;
@@ -381,6 +373,81 @@
                 
                 
             }
+        }
+    }
+
+    .icons{
+        i{
+            padding-top: 10px;
+            width: 35px;
+            height: 35px;
+            font-size: 15px;
+            text-align: center;
+            vertical-align: middle;
+            color: $secondary;
+            &:hover{
+                background-color: $secondary;
+                color: white;
+            }
+        }
+    }
+    
+}
+
+.product-detail-alt{
+    @include media-breakpoint-up(lg) { 
+        #product-main-photo{
+            height: 317px !important;
+        }
+    }
+    .product-heading-alt{
+        @include media-breakpoint-up(lg) { 
+            display: flex;
+            .product-title{
+                font-size: 25px;
+
+            }
+            .icons{
+                padding-left: 5px;
+                i{
+                    display: block;
+                }   
+            }
+        }
+        
+    }
+    .right-alt-col{
+        border-left: $default-border;
+        padding-left: 20px;
+        @include media-breakpoint-down(md) { 
+            border: none;
+            padding-left: 15px;
+        }
+        .material-select{
+            @include media-breakpoint-up(lg) { 
+                label{
+                    width: 100%;
+                }
+                .btn-standard{
+                    display: block;
+                    width: 100%;
+                }
+            }
+            
+        }
+        .add-to-cart-bar{
+            @include media-breakpoint-up(lg) { 
+                display: block;
+                *{
+                    width: 100%;
+                }
+                .btn-standard{
+                    margin-top: -6.2px;
+                }
+            }
+            
+            
+            
         }
     }
     
